force-app/main/default/objects/Business_Event__e/Business_Event__e.object-meta.xml
<CustomObject>
    <label>Business Event</label>
    <pluralLabel>Business_Event</pluralLabel>
</CustomObject>