force-app/main/default/objects/Business_Event__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <defaultValue>&quot;MESSAGE&quot;</defaultValue>
    <description>values: &apos;message&apos;, &apos;record_link&apos;, &apos;flow&apos;</description>
    <label>Action</label>
    <length>20</length>
    <type>Text</type>
</CustomField>