force-app/main/default/objects/Business_Event__e/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>