force-app/main/default/objects/Business_Event__e/fields/Link_Label__c.field-meta.xml
<CustomField>
    <fullName>Link_Label__c</fullName>
    <label>Link Label</label>
    <length>30</length>
    <type>Text</type>
</CustomField>