force-app/main/default/objects/Business_Event__e/fields/Link_Target__c.field-meta.xml
<CustomField>
    <fullName>Link_Target__c</fullName>
    <description>any valid values for the html &lt;a&gt; element &apos;target&apos; attribute. 
the primary two options:
_self = current window
_blank = new window/tab</description>
    <label>Link Target</label>
    <length>10</length>
    <type>Text</type>
</CustomField>