force-app/main/default/objects/Business_Event__e/fields/Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_URL__c</fullName>
    <label>Link URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>