force-app/main/default/objects/Business_Event__e/fields/Record_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Record_Field_Value__c</fullName>
    <label>Record Field Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>