force-app/main/default/objects/Business_Event__e/fields/Show_Flow_In_Modal__c.field-meta.xml
<CustomField>
    <fullName>Show_Flow_In_Modal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Flow In Modal</label>
    <type>Checkbox</type>
</CustomField>