force-app/main/default/objects/Business_Event__e/fields/Show_Toast__c.field-meta.xml
<CustomField>
    <fullName>Show_Toast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells the Notification Hub to display a toast message when the event arrives.</description>
    <label>Show Toast</label>
    <type>Checkbox</type>
</CustomField>