force-app/main/default/objects/Business_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>values: &apos;error&apos;, &apos;warning&apos;, &apos;success&apos;, or &apos;info&apos;.</description>
    <label>Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>